--- a/assets/css/all-stylesheets.css
+++ b/assets/css/all-stylesheets.css
@@ -2330,6 +2330,11 @@ fieldset[disabled] .btn-link:focus {
     color: #001E32;
 }
 
+.btn.btn-edge-dark{
+    color: #000;
+}
+
+
 .btn.btn-edge.btn-edge-blue:hover:after{
     color: #001E32;
 }
@@ -2341,6 +2346,7 @@ fieldset[disabled] .btn-link:focus {
     font-family: FontAwesome;
     margin-right: 1em;
 }
+
 
 
 
@@ -2802,7 +2808,7 @@ a.morelink:hover {
 .widgettitle{
     border-left-color: #fff;
     margin-bottom: 30px;
-    border-left: 6px solid;
+    border-left: 6px solid #e51937;
     background: #f5f5f5;
     padding: 10px 10px 10px 20px;
     font-size: 18px;
@@ -2819,6 +2825,40 @@ a.morelink:hover {
 .story a:hover,.story a:focus{
     text-decoration
 }
+
+
+
+.main-logo.news{
+        position: relative;
+    display: inline-block;
+}
+
+.header-container.news{
+    margin-bottom: 50px;
+    border-top: 10px solid #001E32;
+    background: #f5f5f5;
+}
+
+.page-section.news{
+    padding-top: 0px;
+}
+
+.article-image{
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+
+.similar-news{
+    border-bottom: 1px solid #e5e5e5;
+    margin-left: 20px;
+}
+
+.thin-header-title {
+    display: inline-block;
+    padding-left: 50px;
+}
+
+
 /*------------------------------------------------------------------------*/
 /* 12. Hover box - majors/dept listing
 /*------------------------------------------------------------------------*/
@@ -3017,6 +3057,145 @@ a.morelink:hover {
     background: #C8C8C8;
     
 }
+
+     
+/**Home stylesheets **/
+
+.btn-all-news{
+    background-color: #043B61;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+
+
+
+.section.call-to-action{
+    padding: 0px;
+}
+.section.call-to-action .col-md-8, .section.call-to-action .col-md-4{
+    padding: 50px;
+}
+
+.section.call-to-action h3{
+    color: #fff;
+}
+
+
+.section-no-padding h1{
+    color: #043B61
+}
+
+.section-no-padding .table{
+    color: #333;
+}
+
+.upcoming-events{
+    background: #fff;
+    padding: 50px;
+    min-height: 450px;
+    color: #fff;
+}
+
+            
+/**-------table ------*/
+            
+.table > thead > tr > th {
+  border-bottom-width: 1px;
+  font-size: 18px;
+  font-weight: 300;
+}
+.table .radio,
+.table .checkbox {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+  width: 15px;
+}
+.table .radio .icons,
+.table .checkbox .icons {
+  position: relative;
+}
+.table > thead > tr > th,
+.table > tbody > tr > th,
+.table > tfoot > tr > th,
+.table > thead > tr > td,
+.table > tbody > tr > td,
+.table > tfoot > tr > td {
+  padding: 12px 8px;
+  vertical-align: middle;
+}
+.table .th-description {
+  max-width: 150px;
+}
+.table .td-price {
+  font-size: 26px;
+  font-weight: 300;
+  margin-top: 5px;
+  text-align: right;
+}
+.table .td-total {
+  font-weight: 600;
+  font-size: 18px;
+  padding-top: 20px;
+  text-align: right;
+}
+.table .td-actions .btn {
+  opacity: 0.36;
+  filter: alpha(opacity=36);
+}
+.table .td-actions .btn.btn-xs {
+  padding-left: 3px;
+  padding-right: 3px;
+}
+.table > tbody > tr {
+  position: relative;
+}
+.table > tbody > tr:hover .td-actions .btn {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.table-shopping > thead > tr > th {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #9A9A9A;
+  font-weight: 400;
+}
+.table-shopping > tbody > tr > td {
+  font-size: 16px;
+}
+.table-shopping > tbody > tr > td b {
+  display: block;
+  margin-bottom: 5px;
+}
+.table-shopping .td-name,
+.table-shopping .td-number {
+  font-weight: 300;
+  font-size: 22px;
+}
+.table-shopping .td-name {
+  min-width: 200px;
+}
+.table-shopping .td-number {
+  text-align: right;
+  min-width: 70px;
+}
+.table-shopping .td-number small {
+  margin-right: 3px;
+}
+.table-shopping .img-container {
+  width: 120px;
+  height: 120px;
+  overflow: hidden;
+  display: block;
+  border-radius: 6px;
+}
+.table-shopping .img-container img {
+  width: 100%;
+}
+
 
 
  /*****mba ad */
