--- a/assets/css/all-stylesheets.css
+++ b/assets/css/all-stylesheets.css
@@ -128,7 +128,7 @@ body {
 }
 
 .hero-section .no-hero-vid {
-    background-image: url(../images/hu.jpg);
+    background:#011F32;
     background-position: center top;
     position: absolute;
     top: 0;
@@ -1315,6 +1315,18 @@ body {
       overflow: hidden;
     }
 
+
+/* Smartphones (portrait and landscape) ----------- */
+@media (max-width: 500px) {
+	/* Styles */
+	.bs-header .image img{
+		height: 450px;
+		width: auto !important;
+	}
+}
+
+
+
 .bs-header .image img {
     width: 100%;
 }
@@ -1333,6 +1345,30 @@ body {
 }
 
 
+@media(max-width:1000px){
+    
+    .bs-header.large .image img {
+        height: 100% !important;
+        width: auto;
+    }
+
+}
+
+
+
+@media(max-width:500px){
+    .bs-header.large {
+        height: 500px;
+    }
+    
+    .bs-header.large .image{
+        height: 100% !important;
+        width: auto;
+    }
+
+}
+
+
 @media (max-width: 1100px){
     .bs-header-img{
         height: 100%;
@@ -1342,6 +1378,7 @@ body {
     .main-logo{
         width: 35%;
     }
+    
 }
 
 @media (max-width: 600px){
@@ -1368,6 +1405,9 @@ body {
         padding: 5px;
         margin-top: 5px;
     }
+    
+    
+    
      
 }
     
@@ -1454,6 +1494,46 @@ body {
   margin-right: -50%;
   transform: translate(-25%)
 }
+
+@media (max-width: 1000px){
+    .card .image img {
+        position: absolute; 
+        width: 200%; 
+       height: auto;
+    }
+}
+
+@media (max-width: 700){
+    .card .image img {
+       width: auto;
+       height: 100%;
+       left: 100%;left: 50%;
+       margin-right: -50%;
+       transform: translate(-25%)
+    }
+    
+    .card .image{
+        background: black;
+    }
+}
+
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+/* Styles */
+    .card .image img {
+       width: auto;
+       height: 100%;
+       left: 100%;left: 50%;
+       margin-right: -50%;
+       transform: translate(-25%)
+    }
+}
+
+
+
 .card .filter {
   position: absolute;
   z-index: 2;
